blocks/header/header.css
/* ... */
  /* Switch the color of all text elements down the nav to white when expanded */
  header #nav[aria-expanded="true"] {
    color: var(--mobile-nav-extended-color);
  }

  /* Class added to the logo when the menu expands to have it rendered white */
  header .logo-white {
    color: var(--mobile-nav-extended-logo-color);
  }

/* Change layout of the main nav container to align all left in a simple block */
  header #nav[aria-expanded="true"] .header-navigation {
    width: 100%;
    display: block;
    position: absolute;
    left: 0;
    top: 12.5rem;
    overflow: scroll;
    padding: .3rem 2rem 14rem;
    box-sizing: border-box;
  }


  /* Styling for nav section container */
  header #nav[aria-expanded="true"] .nav-sections {
    height: auto;
    display: block;
    visibility: visible;
    left: 0;
    overflow: hidden;
    top: 12.5rem;
    z-index: 6;
  }

  /* Define the style for regular nav section items */
  header #nav[aria-expanded="true"] .nav-sections > ul {
    max-width: 225px;
    min-width: 225px;
    list-style: none;
    margin-top: 0;
    margin-bottom: 1em;
    padding-inline-start: 0;
  }

/*  Bring the tools menu in as a block element below the sections and divider */
header #nav[aria-expanded="true"] .nav-tools {
  display: block;
  height: auto;
  visibility: visible;
  font-size: 1.6rem;
}

  header #nav[aria-expanded="true"] .nav-tools li {
    margin-top: 1.5rem;
  }

  /* Don't show sub-menu items by default */
  header #nav[aria-expanded="true"] .sub-menu-section li {
    display: none;
  }

  /* Stagger the opacity transition for each menu item to do the pretty cascade thing */
  header #nav .nav-sections > ul > div:nth-child(1) > li { transition-delay: 0.40s }
  header #nav .nav-sections > ul > div:nth-child(2) > li { transition-delay: 0.45s }
  header #nav .nav-sections > ul > div:nth-child(3) > li { transition-delay: 0.50s }
  header #nav .nav-sections > ul > div:nth-child(4) > li { transition-delay: 0.55s }
  header #nav .nav-sections > ul > div:nth-child(5) > li { transition-delay: 0.60s }

/*  Render the section divider */
  header #nav[aria-expanded="true"] hr.nav-section-divider {
    display: block;
  }

  /*  Don't render the search icon when the menu is expanded */
  header #nav[aria-expanded="true"] .icon-search {
    display: none;
  }

  /*  Make the menu elements act like links */
  header #nav[aria-expanded="true"] .nav-sections > ul li:hover {
    cursor: pointer;
  }

/***** Styling the mobile mode nav menu when a sub menu is selected *****/

  /* Display style for nav section items with children when expanded */
  header #nav[aria-expanded="true"] .nav-sections > ul > li[aria-expanded="true"] > ul {
    display: none;
  }

  /*  Display the immediate children of the section as the nav index */
  header #nav[aria-expanded="true"] .sub-menu-section-active > ul.sub-menu-index > li {
    font-weight: 600;
    display: block;
    opacity: 1;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    position: relative;
    padding-right: 20px;
    background-color: var(--mobile-nav-extended-background);
    color: var(--mobile-nav-extended-color);
    font-size: 1.8rem;
    margin: 30px 0;
  }

  /* Styling and transition for the sub menu elements */
  header #nav[aria-expanded="true"] .nav-sections > ul > div.nav-item-wrapper > li {
    font-size: 2.3rem;
    font-weight: 600;
    letter-spacing: 0;
    line-height: 4.6rem;
    margin-bottom: 2.0rem;
    text-decoration: underline;
    transition: opacity .6s ease-out .25s;
  }

  /* Property to change on the sub children once displayed to animate them fading in */
  header .nav-sections > ul > div > li.animate-fade-in {
    opacity:1;
  }

  /* Don't display the search icon when the nav menu is expanded */
  header #nav[aria-expanded="true"] .nav-search {
    display: none;
  }

/* Switch the hamburger icon to a white close icon when the nav is expanded */
  header #nav[aria-expanded="true"] .nav-hamburger-icon {
    background-color: var(--mobile-nav-extended-background);
    top:0;
  }

  /* Morph the hamburger icon to a close button */
  header #nav[aria-expanded="true"] .nav-hamburger-icon::before,
  header #nav[aria-expanded="true"] .nav-hamburger-icon::after {
    top: 10px;
    left: 0;
    transform: rotate(45deg);
    width: 24px;
    height: 3px;
    border-radius: 2px;
  }

  header #nav[aria-expanded="true"] .nav-hamburger-icon::after {
    bottom: 3px;
    transform: rotate(-45deg);
  }


/*  Styling for the back button that displays when in a sub menu in mobile */
header #nav .nav-back-button {
  transition: opacity .36s ease-in-out .36s;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: -.02rem;
  line-height: 2rem;
  background-color: var(--mobile-nav-extended-background);
  border: 0;
  color: var(--mobile-nav-extended-color);
  cursor: pointer;
  display: none;
  left: 2rem;
  opacity: 0;
  padding: 0 0 0 2rem;
  position: absolute;
  top: 2.2rem;
  z-index: 8;
  width: auto;
  height: auto;
}

header #nav .nav-back-button > button {
  transition: opacity .36s ease-in-out .36s;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: -.02rem;
  line-height: 2rem;
  background-color: var(--mobile-nav-extended-background);
  border: 0;
  cursor: pointer;
  padding: 0 0 0 2rem;
  position: absolute;
}

header #nav .nav-back-button > button::before {
  border-bottom: .2rem solid var(--mobile-nav-extended-decoration-color);
  border-left: .2rem solid var(--mobile-nav-extended-decoration-color);
  content: "";
  height: 1rem;
  left: .3rem;
  margin-top: -.5rem;
  position: absolute;
  top: 50%;
  transform: rotate(45deg);
  width: 1rem;
}

header #nav .nav-back-button-active {
  display:block;
}

header #nav .nav-back-button-animation-start {
  opacity:1;
}

header #nav .sub-menu-section-active > ul.sub-menu-index {
  padding-left: 0;
}
/* ... */

